Handle out of order tile priorities when building graph

Currently, InsertNodesForRasterTask in tile_manager.cc assumes that
all high priority tasks will be added before low priority ones. This is
generally true, but two cases violate this:
- low resolution tiles in the NOW bin may have higher priority than
  other tiles that are required for draw/activation.
- some SOON tiles not required for activation may come before SOON
  tiles which are required for activation. (bug files)

To address the first issue, the calculation of high_priority now takes
the NOW bucket into account. To fix the second issue,
InsertNodesForRasterTask now handles out-of-order priorities and a bug
has been filed to fix this.

BUG=592160
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1796423002

Cr-Commit-Position: refs/heads/master@{#383126}

Former-commit-id: c38d1f4bce5165b0114fc9c429812e93f64850bf